# PillLauncher

./: .gitignore  AGENTS.md  gen-icon.ps1  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/specs/: 2026-05-19-atl-launcher-enhancements-design.md
src/: DebugPanel.jsx  EditorModal.jsx  FileTree.jsx  ProjectTabs.jsx  index.css  main.jsx  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: conpty_helper.rs  lib.rs  main.rs  winpty_dll.rs
