[package]
name = "pilllauncher"
version = "1.1.1"
description = "PillLauncher - Universal App Launcher"
authors = ["PillLauncher"]
edition = "2021"
rust-version = "1.77.2"
default-run = "pilllauncher"

[[bin]]
name = "pilllauncher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
libloading = "0.8"
portable-pty = "0.9"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
] }
